kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: face-analysis-app
  namespace: aif
  labels:
    app: face-analysis-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: face-analysis-app
  template:
    metadata:
      labels:
        app: face-analysis-app
    spec:
      containers:
        - name: face-analysis-app
          image: ghcr.io/mtcsla/aif-face-analysis/face-analysis-app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
      imagePullSecrets:
        - name: ghcr-secret
